# ergo

./: .cspell.json  Cargo.toml
.claude/: CLAUDE.MD
.claude/.claude.code/: CLAUDE_CODE_PROTOCOL.md  how-to-git-issues.md  settings.local.json
crates/.claude/.claude.code/: CLAUDE.MD  settings.local.json
crates/.claude/.claude.prime/: CLAUDE.MD
crates/adapter/: cargo.toml
crates/adapter/src/: capture.rs  lib.rs
crates/runtime/: Cargo.toml  README.md  cspell.json
crates/runtime/src/: catalog.rs  cluster.rs  lib.rs
crates/runtime/src/action/: MANIFEST.md  graph.rs  mod.rs  registry.rs  tests.rs
crates/runtime/src/common/: errors.rs  mod.rs  value.rs
crates/runtime/src/compute/: graph.rs  mod.rs  registry.rs  tests.rs
crates/runtime/src/runtime/: execute.rs  mod.rs  tests.rs  types.rs  validate.rs
crates/runtime/src/source/: graph.rs  mod.rs  registry.rs  tests.rs
crates/runtime/src/trigger/: MANIFEST.md  graph.rs  mod.rs  registry.rs
crates/supervisor/: SUPERVISOR.md  cargo.toml
crates/supervisor/src/: capture.rs  lib.rs  replay.rs
crates/supervisor/tests/: integration.rs  replay_harness.rs
crates/ui-authoring/: README.md  package.json
crates/ui-authoring/src/: index.tsx
docs/: README.md
docs/CANONICAL/: PHASE_INVARIANTS.md  TERMINOLOGY.md
docs/CONTRACTS/: UI_RUNTIME_CONTRACT.md
docs/FROZEN/: SUPERVISOR.md  V0_FREEZE.md  adapter_contract.md  execution_model.md  ontology.md
docs/STABLE/: AUTHORING_LAYER.md  CLUSTER_SPEC.md
docs/STABLE/PRIMITIVE_MANIFESTS/: action.md  compute.md  source.md  trigger.md
(+84 files in other folders)
