[workspace]
resolver = "2"

members = [
    "crates/runtime",
    "crates/adapter",
    "crates/supervisor",
]

# UI is intentionally excluded (non-Rust)
exclude = [
    "crates/ui-authoring",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<your-org>/ergo"